--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 .card img{
-    width:100%;
+    width: 75p;
     height:180px;
     object-fit:cover;
     border-radius:10px;
     margin-bottom:15px;
 }
 :root{
-    --rojo:#d62828;
-    --naranja:#f77f00;
-    --gris:#343a40;
+    --rojo:#000000;
+    --naranja:#000000;
+    --gris:#42678b;
     --claro:#f8f9fa;
 }
 
@@ -121,7 +121,7 @@ nav a:hover{
 
 /* ===== TARJETAS ===== */
 .card{
-    background:white;
+    background:rgb(82, 77, 77);
     padding:20px;
     border-radius:10px;
     box-shadow:0 5px 15px rgba(0,0,0,0.1);
@@ -210,4 +210,52 @@ footer{
 
 .pagina-secundaria .card:hover{
     transform:scale(1.05);
+}
+/* MODAL FONDO */
+.modal{
+    display:none;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,0.6);
+    backdrop-filter:blur(5px);
+    justify-content:center;
+    align-items:center;
+}
+
+/* CUADRO GRANDE */
+.modal-contenido{
+    background:#fff;
+    padding:30px;
+    width:400px;
+    border-radius:15px;
+    text-align:center;
+    position:relative;
+    animation:aparecer 0.3s ease;
+}
+
+/* Imagen del modal */
+.img-modal{
+    width:100%;
+    height:200px;
+    object-fit:cover;
+    border-radius:10px;
+    margin:15px 0;
+}
+
+/* Botón cerrar */
+.cerrar{
+    position:absolute;
+    top:10px;
+    right:15px;
+    font-size:25px;
+    cursor:pointer;
+}
+
+/* Animación */
+@keyframes aparecer{
+    from{transform:scale(0.8); opacity:0;}
+    to{transform:scale(1); opacity:1;}
 }
