--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ nav a:hover{
 }
 
 .card img{
-    width:100%;
+    width:75%;
     height:180px;
     object-fit:cover;
     border-radius:10px;
@@ -291,4 +291,21 @@ footer{
     background-position: center;  /* Centra la imagen */
     background-repeat: no-repeat; /* No se repite */
     background-attachment: fixed; /* Efecto tipo fijo */
+}
+
+
+.btn-nav{
+    display:inline-block;
+    background:#ff6600;
+    color:white;
+    padding:12px 25px;
+    border-radius:30px;
+    text-decoration:none;
+    font-weight:bold;
+    transition:0.3s;
+}
+
+.btn-nav:hover{
+    background:#cc5200;
+    transform:scale(1.05);
 }
